@@ -1,3 +1,8 @@
+src/libvtemm/g/terminal.(h|cc)g:
+	remove nonconst getter functions, when it will be possible.
+	fix possible memleaks in get_text functions.
+src/libvtemm/textandcharattrs.(h|cc):
+	remove nonconst getter functions, when it will be possible.
 src/libvtemm/g/*.(h|cc)g:
 src/libvtemm/*.(cc|h):
 	squashing bugs. as always.
